--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="Index.html">Home Page</a></li>
+          <li><a href="index.html">Home Page</a></li>
           <li><a href="./html/my_resume.html">Resume Page</a></li>
           <li><a href="./html/my_fun_facts.html">Fun Facts Page</a></li>
         </ul>
