--- a/html/my_fun_facts.html
+++ b/html/my_fun_facts.html
@@ -15,7 +15,7 @@
       <nav>
         <ul>
           <li>
-            <a href="../Index.html">Home Page</a>
+            <a href="../index.html">Home Page</a>
           </li>
           <li>
             <a href="my_resume.html">Resume Page</a>
@@ -82,6 +82,12 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
+
+      <h2>Me Playing Soccer</h2>
+      <video controls width="400" height="225">
+        <source src="../video/LaithSoccer.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
 
       <hr />
       <footer>
