--- a/html/my_resume.html
+++ b/html/my_resume.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li>
-          <a href="../Index.html">Home Page</a>
+          <a href="../index.html">Home Page</a>
         </li>
         <li>
           <a href="my_resume.html">Resume Page</a>
